--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 			<div>
 				<nav>
 					<ul class="flex gap-8 text-[#FFFFFF]">
-						<li><a class="text-lg font-medium" href="#">Home</a></li>
-						<li><a class="text-lg font-medium" href="#">About Us</a></li>
-						<li><a class="text-lg font-medium" href="#">Shop</a></li>
-						<li><a class="text-lg font-medium" href="#">All Fruits</a>
+						<li><a class="text-lg font-medium hover:text-[#212121] duration-500" href="#">Home</a></li>
+						<li><a class="text-lg font-medium hover:text-[#212121] duration-500" href="#">About Us</a></li>
+						<li><a class="text-lg font-medium hover:text-[#212121] duration-500" href="#">Shop</a></li>
+						<li><a class="text-lg font-medium hover:text-[#212121] duration-500" href="#">All Fruits</a>
 						</li>
 					</ul>
 				</nav>
@@ -66,6 +66,7 @@
 			</div>
 		</div>
 	</header>
+	
 	<!-- main section -->
 	<main class="custom-container">
 	<!-- banner section -->
@@ -80,7 +81,8 @@
 					<h2 class="text-[#FFFFFF] mb-6 font-extrabold text-7xl">Exotic tastes at your <br> doorstep</h2>
 					<p class="text-[#FFFFFF] mb-8 font-medium text-xl">We supply highly quality organic products</p>
 					<div>
-						<a class="px-8 py-4 bg-[#F85559] text-[#FFFFFF] text-xl font-extrabold rounded-lg" href="#">Shop Now</a>
+						<a class="px-8 py-4 bg-[#F85559] text-[#FFFFFF] text-xl font-extrabold rounded-lg hover:bg-[#FFFFFF] hover:text-[#212121]
+						duration-500" href="#">Shop Now</a>
 					</div>
 				</div>
 			</div>
@@ -93,12 +95,12 @@
 			<div id="slide2" class="carousel-item relative w-full">
 				<div class="relative">
 				<img src="assets/media/banner3.png" class="w-full"/>
-				<div class="absolute inset-0 bg-[#000000] bg-opacity-50"></div>
+				<div class="absolute inset-0 bg-[#000000] bg-opacity-50 rounded-lg"></div>
 				<div class="absolute top-20 text-center left-96">
 					<h2 class="text-[#FFFFFF] mb-6 font-extrabold text-7xl">Exotic tastes at your <br> doorstep</h2>
 					<p class="text-[#FFFFFF] mb-8 font-medium text-xl">We supply highly quality organic products</p>
 					<div>
-						<a class="px-8 py-4 bg-[#F85559] text-[#FFFFFF] text-xl font-extrabold rounded-lg" href="#">Shop Now</a>
+						<a class="px-8 py-4 bg-[#F85559] text-[#FFFFFF] text-xl font-extrabold rounded-lg hover:bg-[#FFFFFF] hover:text-[#212121]" href="#">Shop Now</a>
 					</div>
 				</div>
 				</div>
@@ -111,12 +113,12 @@
 			<div id="slide3" class="carousel-item relative w-full">
 				<div class="relative">
 				<img src="assets/media/banner2.png" class="w-full"/>
-				<div class="absolute inset-0 bg-[#000000] bg-opacity-50"></div>
+				<div class="absolute inset-0 bg-[#000000] bg-opacity-50 rounded-lg"></div>
 					<div class="absolute top-20 text-center left-96">
 						<h2 class="text-[#FFFFFF] mb-6 font-extrabold text-7xl">Exotic tastes at your <br> doorstep</h2>
 						<p class="text-[#FFFFFF] mb-8 font-medium text-xl">We supply highly quality organic products</p>
 						<div>
-							<a class="px-8 py-4 bg-[#F85559] text-[#FFFFFF] text-xl font-extrabold rounded-lg" href="#">Shop Now</a>
+							<a class="px-8 py-4 bg-[#F85559] text-[#FFFFFF] text-xl font-extrabold rounded-lg hover:bg-[#FFFFFF] hover:text-[#212121]" href="#">Shop Now</a>
 						</div>
 					</div>
 				</div>
@@ -129,12 +131,12 @@
 			<div id="slide4" class="carousel-item relative w-full">
 				<div class="relative">
 				<img src="assets/media/banner1.png" class="w-full h-"/>
-				<div class="absolute inset-0 bg-[#000000] bg-opacity-50"></div>
+				<div class="absolute inset-0 bg-[#000000] bg-opacity-50 rounded-lg"></div>
 				<div class="absolute top-20 text-center left-96">
 					<h2 class="text-[#FFFFFF] mb-6 font-extrabold text-7xl">Exotic tastes at your <br> doorstep</h2>
 					<p class="text-[#FFFFFF] mb-8 font-medium text-xl">We supply highly quality organic products</p>
 					<div>
-						<a class="px-8 py-4 bg-[#F85559] text-[#FFFFFF] text-xl font-extrabold rounded-lg" href="#">Shop Now</a>
+						<a class="px-8 py-4 bg-[#F85559] text-[#FFFFFF] text-xl font-extrabold rounded-lg hover:bg-[#FFFFFF] hover:text-[#212121]" href="#">Shop Now</a>
 					</div>
 				</div>
 				</div>
@@ -171,14 +173,92 @@
 			</div>
 		</div>
 	</section>
-	<!-- deal of the day section -->
-	<section>
+	<!-- Deal of the day section -->
+	<section class="bg-[#FFFFFF] pb-36">
+		<div class="flex justify-between">
+			<div>
+				<h2 class="text-[#212121] text-5xl mb-6 font-extrabold">Deal of the day</h2>
+				<p class="text-[#212121] text-base font-normal">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+			</div>
+			<div>
+				<ul class="flex gap-6">
+					<li class="text-center">
+						<h1 class="text-[#212121] font-extrabold mb-2 text-5xl">29</h1>
+						<p class="text-[#717171] text-base font-medium">Days</p>
+					</li>
+					<li>
+						<i class="text-[#212121] mt-3 text-2xl fa-solid fa-ellipsis-vertical"></i>
+					</li>
+					<li class="text-center">
+						<h1 class="text-[#212121] font-extrabold mb-2 text-5xl">15</h1>
+						<p class="text-[#717171] text-base font-medium">Hours</p>
+					</li>
+					<li>
+						<i class="text-[#212121] mt-3 text-2xl fa-solid fa-ellipsis-vertical"></i>
+					</li>
+					<li class="text-center">
+						<h1 class="text-[#212121]  font-extrabold mb-2 text-5xl">25</h1>
+						<p class="text-[#717171] text-base font-medium">Minutes</p>
+					</li>
+					<li>
+						<i class="text-[#212121] mt-3 text-2xl fa-solid fa-ellipsis-vertical"></i>
+					</li>
+					<li class="text-center">
+						<h1 class="text-[#212121] font-extrabold mb-2 text-5xl">8</h1>
+						<p class="text-[#717171] text-base font-medium">Seconds</p>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div>
 
+		</div>
+	</section>
+	<!-- meet the team section -->
+	<section>
+		<div class="image-holder py-32 mb-36  rounded-lg">
+			<div class="text-center">
+				<h2 class="font-extrabold text-[#FFFFFF] text-5xl mb-6">Meet the team section</h2>
+				<p class="text-[#FFFFFF] text-base font-medium mb-12">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+			</div>
+		</div>
 	</section>
 	</main>
 	<!-- footer section -->
-	<footer class="custom-container">
-		
+	<footer class="bg-[#121212] py-36">
+		<div class="mb-14 flex justify-center">
+			<a href="#"><img src="assets/media/logo.png" alt=""></a>
+		</div>
+		<div class="mb-16">
+			<ul class="flex items-center gap-16 justify-center">
+				<li>
+					<a class="font-semibold text-[#FFFFFF] text-lg hover:text-[#FBC0A8] duration-500" href="#">Home</a>
+				</li>
+				<li>
+					<a class="font-semibold text-[#FFFFFF] text-lg hover:text-[#FBC0A8] duration-500" href="#">About Us</a>
+				</li>
+				<li>
+					<a class="font-semibold text-[#FFFFFF] text-lg hover:text-[#FBC0A8] duration-500" href="#">Shop</a>
+				</li>
+				<li>
+					<a class="font-semibold text-[#FFFFFF] text-lg hover:text-[#FBC0A8] duration-500" href="#">All Fruits</a>
+				</li>
+				<li>
+					<a class="font-semibold text-[#FFFFFF] text-lg hover:text-[#FBC0A8] duration-500" href="#">Support</a>
+				</li>
+				<li>
+					<a class="font-semibold text-[#FFFFFF] text-lg hover:text-[#FBC0A8] duration-500" href="#">My Account</a>
+				</li>
+			</ul>
+		</div>
+		<div class="flex items-center justify-center gap-10">
+			<a href=""><img src="assets/media/fpic-1.svg" alt=""></a>
+			<a href=""><img src="assets/media/fpic-2.svg" alt=""></a>
+			<a href=""><img src="assets/media/fpic-3.svg" alt=""></a>
+			<a href=""><img src="assets/media/fpic-4.svg" alt=""></a>
+			<a href=""><img src="assets/media/fpic-5.svg" alt=""></a>
+			<a href=""><img src="assets/media/fpic-6.svg" alt=""></a>
+		</div>
 	</footer>
 </body>
 </html>
