--- a/index.html
+++ b/index.html
@@ -215,11 +215,53 @@
 		</div>
 	</section>
 	<!-- meet the team section -->
-	<section>
+	<section class="team-section sm:grid-cols-1">
 		<div class="image-holder py-32 mb-36  rounded-lg">
 			<div class="text-center">
 				<h2 class="font-extrabold text-[#FFFFFF] text-5xl mb-6">Meet the team section</h2>
 				<p class="text-[#FFFFFF] text-base font-medium mb-12">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+			</div>
+			<div class="flex items-center gap-28 justify-center">
+				<div class="text-center grid sm:grid-cols-1">
+					<img class="mb-8" src="assets/media/member1.png" alt="">
+					<h4 class="mb-2 text-[#FFFFFF] font-bold text-2xl">Awlad Hossain</h4>
+					<p class="mb-4 text-[#FFFFFF] text">Fruits Expert</p>
+					<div class="flex items-center gap-3 justify-center">
+						<a class="font-bold text-[#FFFFFF] bg-[#F85559] rounded-full " href="#"><i class="fa-brands fa-facebook-f"></i></a>
+						<a class="add-style font-bold text-[#FFFFFF] bg-[#F85559] rounded-full " href="#"><i class="fa-brands fa-twitter"></i></a>
+						<a class="add-style-2 font-bold text-[#FFFFFF] bg-[#F85559] rounded-full " href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+					</div>
+				</div>
+				<div class="text-center grid sm:grid-cols-1">
+					<img class="mb-8" src="assets/media/member2.png" alt="">
+					<h4 class="mb-2 text-[#FFFFFF] font-bold text-2xl">Awlad Hossain</h4>
+					<p class="mb-4 text-[#FFFFFF] text">Fruits Expert</p>
+					<div class="flex items-center gap-3 justify-center">
+						<a class="font-bold text-[#FFFFFF] bg-[#F85559] rounded-full " href="#"><i class="fa-brands fa-facebook-f"></i></a>
+						<a class="add-style font-bold text-[#FFFFFF] bg-[#F85559] rounded-full " href="#"><i class="fa-brands fa-twitter"></i></a>
+						<a class="add-style-2 font-bold text-[#FFFFFF] bg-[#F85559] rounded-full " href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+					</div>
+				</div>
+				<div class="text-center grid sm:grid-cols-1">
+					<img class="mb-8" src="assets/media/member3.png" alt="">
+					<h4 class="mb-2 text-[#FFFFFF] font-bold text-2xl">Awlad Hossain</h4>
+					<p class="mb-4 text-[#FFFFFF] text">Fruits Expert</p>
+					<div class="flex items-center gap-3 justify-center">
+						<a class="font-bold text-[#FFFFFF] bg-[#F85559] rounded-full " href="#"><i class="fa-brands fa-facebook-f"></i></a>
+						<a class="add-style font-bold text-[#FFFFFF] bg-[#F85559] rounded-full " href="#"><i class="fa-brands fa-twitter"></i></a>
+						<a class="add-style-2 font-bold text-[#FFFFFF] bg-[#F85559] rounded-full " href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+					</div>
+				</div>
+				<div class="text-center grid sm:grid-cols-1">
+					<img class="mb-8" src="assets/media/member4.png" alt="">
+					<h4 class="mb-2 text-[#FFFFFF] font-bold text-2xl">Awlad Hossain</h4>
+					<p class="mb-4 text-[#FFFFFF] text">Fruits Expert</p>
+					<div class="flex items-center gap-3 justify-center">
+						<a class="font-bold text-[#FFFFFF] bg-[#F85559] rounded-full " href="#"><i class="fa-brands fa-facebook-f"></i></a>
+						<a class="add-style font-bold text-[#FFFFFF] bg-[#F85559] rounded-full " href="#"><i class="fa-brands fa-twitter"></i></a>
+						<a class="add-style-2 font-bold text-[#FFFFFF] bg-[#F85559] rounded-full " href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
