--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<h2 class="max-[640px]:text-2xl text-[#FFFFFF] max-[640px]:mb-1  mb-6 font-extrabold text-7xl">Exotic tastes at your <br> doorstep</h2>
 					<p class="max-[640px]:text-sm text-[#FFFFFF] max-[640px]:mb-4 mb-8 font-medium text-xl">We supply highly quality organic products</p>
 					<div>
-						<a class="max-[640px]:text-lg px-8 py-4 bg-[#F85559] text-[#FFFFFF] text-xl font-extrabold rounded-lg hover:bg-[#FFFFFF] hover:text-[#212121]
+						<a class=" px-8 py-4 bg-[#F85559] text-[#FFFFFF] text-xl font-extrabold rounded-lg hover:bg-[#FFFFFF] hover:text-[#212121]
 						duration-500 max-[640px]:px-4  max-[640px]:py-2 max-[640px]:text-lg" href="#">Shop Now</a>
 					</div>
 				</div>
@@ -108,7 +108,7 @@
 					<h2 class="max-[640px]:text-2xl text-[#FFFFFF] max-[640px]:mb-1  mb-6 font-extrabold text-7xl">Exotic tastes at your <br> doorstep</h2>
 					<p class="max-[640px]:text-sm text-[#FFFFFF] max-[640px]:mb-4 mb-8 font-medium text-xl">We supply highly quality organic products</p>
 					<div>
-						<a class="max-[640px]:text-lg px-8 py-4 bg-[#F85559] text-[#FFFFFF] text-xl font-extrabold rounded-lg hover:bg-[#FFFFFF] hover:text-[#212121]
+						<a class="px-8 py-4 bg-[#F85559] text-[#FFFFFF] text-xl font-extrabold rounded-lg hover:bg-[#FFFFFF] hover:text-[#212121]
 						duration-500 max-[640px]:px-4  max-[640px]:py-2 max-[640px]:text-lg" href="#">Shop Now</a>
 					</div>
 				</div>
@@ -127,7 +127,7 @@
 					<h2 class="max-[640px]:text-2xl text-[#FFFFFF] max-[640px]:mb-1  mb-6 font-extrabold text-7xl">Exotic tastes at your <br> doorstep</h2>
 					<p class="max-[640px]:text-sm text-[#FFFFFF] max-[640px]:mb-4 mb-8 font-medium text-xl">We supply highly quality organic products</p>
 					<div>
-						<a class="max-[640px]:text-lg px-8 py-4 bg-[#F85559] text-[#FFFFFF] text-xl font-extrabold rounded-lg hover:bg-[#FFFFFF] hover:text-[#212121]
+						<a class="px-8 py-4 bg-[#F85559] text-[#FFFFFF] text-xl font-extrabold rounded-lg hover:bg-[#FFFFFF] hover:text-[#212121]
 						duration-500 max-[640px]:px-4  max-[640px]:py-2 max-[640px]:text-lg" href="#">Shop Now</a>
 					</div>
 				</div>
@@ -147,7 +147,7 @@
 						<p class="max-[640px]:text-sm text-[#FFFFFF] max-[640px]:mb-4 mb-8 font-medium text-xl">We supply highly quality organic products</p>
 						<div>
 							<a class="max-[640px]:text-lg px-8 py-4 bg-[#F85559] text-[#FFFFFF] text-xl font-extrabold rounded-lg hover:bg-[#FFFFFF] hover:text-[#212121]
-							duration-500 max-[640px]:px-4  max-[640px]:py-2 max-[640px]:text-lg" href="#">Shop Now</a>
+							duration-500 max-[640px]:px-4  max-[640px]:py-2" href="#">Shop Now</a>
 						</div>
 					</div>
 				</div>
@@ -241,7 +241,7 @@
 						<li><img src="assets/media/Vector3.svg" alt=""></li>
 					</ul>
 				</div>
-				<div class="bg-[#FFFFFF]">
+				<div>
 					<button class="text-lg font-bold text-[#F85559]" onclick="my_modal_1.showModal()">Details</button>
 					<dialog id="my_modal_1" class="modal">
 						<form method="dialog" class="modal-box p-4">
@@ -290,11 +290,11 @@
 						<li><img src="assets/media/Vector3.svg" alt=""></li>
 					</ul>
 				</div>
-				<div class="bg-[#FFFFFF]">
-					<button class="text-lg font-bold text-[#F85559]" onclick="my_modal_1.showModal()">Details</button>
-					<dialog id="my_modal_1" class="modal">
+				<div>
+					<button class="text-lg font-bold text-[#F85559]" onclick="my_modal_2.showModal()">Details</button>
+					<dialog id="my_modal_2" class="modal">
 						<form method="dialog" class="modal-box p-4">
-							<div class="flex justify-center mb-6">
+							<div class="flex justify-center mb-5">
 								<img src="assets/media/fruit7.png" alt="">
 							</div>
 							<h3 class="font-extrabold text-4xl mb-6 text-[#212121]">Orange</h3>
@@ -339,9 +339,9 @@
 						<li><img src="assets/media/Vector3.svg" alt=""></li>
 					</ul>
 				</div>
-				<div class="bg-[#FFFFFF]">
-					<button class="text-lg font-bold text-[#F85559]" onclick="my_modal_1.showModal()">Details</button>
-					<dialog id="my_modal_1" class="modal">
+				<div>
+					<button class="text-lg font-bold text-[#F85559]" onclick="my_modal_3.showModal()">Details</button>
+					<dialog id="my_modal_3" class="modal">
 						<form method="dialog" class="modal-box p-4">
 							<div class="flex justify-center mb-6">
 								<img src="assets/media/fruit8.png" alt="">
@@ -379,8 +379,8 @@
 				<div class="mb-6">
 					<span class="text-[#717171] text-base font-medium">Banana</span>
 				</div>
-				<div>
-					<ul class="flex items-center justify-center gap-2 mb-8">
+				<div class="mb-8">
+					<ul class="flex items-center justify-center gap-2 ">
 						<li><img src="assets/media/Vector1.svg" alt=""></li>
 						<li><img src="assets/media/Vector2.svg" alt=""></li>
 						<li><img src="assets/media/Vector3.svg" alt=""></li>
@@ -388,9 +388,9 @@
 						<li><img src="assets/media/Vector3.svg" alt=""></li>
 					</ul>
 				</div>
-				<div class="bg-[#FFFFFF]">
-					<button class="text-lg font-bold text-[#F85559]" onclick="my_modal_1.showModal()">Details</button>
-					<dialog id="my_modal_1" class="modal">
+				<div>
+					<button class="text-lg font-bold text-[#F85559]" onclick="my_modal_4.showModal()">Details</button>
+					<dialog id="my_modal_4" class="modal">
 						<form method="dialog" class="modal-box p-4">
 							<div class="flex justify-center mb-6">
 								<img src="assets/media/fruit9.png" alt="">
@@ -473,6 +473,51 @@
 			</div>
 		</div>
 	</section>
+	
+	<!-- why choose you section -->
+	<section class="choose-section mb-36 max-[640px]:mb-8">
+		<div class="text-center">
+			<h2 class="font-extrabold text-[#212121] text-5xl mb-6 max-[640px]:text-xl">Why Choose Us</h2>
+			<p class="text-[#212121] text-base font-medium max-[640px:text-sm mb-12 max-[640px]:mb-5">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br class="max-[640px]:hidden"> Latin literature from 45 BC, making it over 2000 years old.</p>
+		</div>
+		<div class="flex max-[640px]:flex-col justify-between items-center">
+			<div class="max-[640px]:text-center max-[640px]:order-2 px-16">
+				<div class="choose-details">
+					<div class="flex gap-6 max-[640px]:flex-col max-[640px]:justify-center">
+						<a class="max-[640px]:mx-auto w-16 h-16 p-5 bg-[#E7E7E7] rounded-full max-[640px]:mb-2" href="#"><img src="assets/media/icon1.svg" alt=""></a>
+						<div>
+							<h4 class=" max-[640px]:mb-6 font-extrabold text-[#212121] text-2xl mb-3">Dedicated Team</h4>
+							<div class="max-[640px]:mx-auto border border-[#414141] w-28 mb-4">
+							</div>
+							<p class="text-[#717171] text-base font-medium max-[640px]:mb-5">Professional employees are there for you to pick <br class="max-[640px]:hidden "> the most amazing and fresh fruits.</p>
+						</div>
+					</div>
+					<div class="flex gap-6 max-[640px]:flex-col max-[640px]:justify-center">
+						<a class="max-[640px]:mx-auto w-16 h-16 p-5 bg-[#E7E7E7] rounded-full max-[640px]:mb-2" href="#"><img src="assets/media/icon1.svg" alt=""></a>
+						<div>
+							<h4 class=" max-[640px]:mb-6 font-extrabold text-[#212121] text-2xl mb-3">Dedicated Team</h4>
+							<div class="max-[640px]:mx-auto border border-[#414141] w-28 mb-4">
+							</div>
+							<p class="text-[#717171] text-base font-medium max-[640px]:mb-5">Professional employees are there for you to pick <br class="max-[640px]:hidden "> the most amazing and fresh fruits.</p>
+						</div>
+					</div>
+					<div class="flex gap-6 max-[640px]:flex-col max-[640px]:justify-center">
+						<a class="max-[640px]:mx-auto w-16 h-16 p-5 bg-[#E7E7E7] rounded-full max-[640px]:mb-2" href="#"><img src="assets/media/icon1.svg" alt=""></a>
+						<div>
+							<h4 class=" max-[640px]:mb-6 font-extrabold text-[#212121] text-2xl mb-3">Dedicated Team</h4>
+							<div class="max-[640px]:mx-auto border border-[#414141] w-28 mb-4">
+							</div>
+							<p class="text-[#717171] text-base font-medium max-[640px]:mb-5">Professional employees are there for you to pick <br class="max-[640px]:hidden "> the most amazing and fresh fruits.</p>
+						</div>
+					</div>
+				</div> 
+			</div>
+			<div class="max-[640px]:order-1 max-[640px]:mb-6">
+				<img src="assets/media/whychoose1.png" alt="" class="h-full">
+			</div>
+			
+		</div>
+	</section>
 	</main>
 	<!-- footer section -->
 	<footer class=" bg-[#121212] py-36">
@@ -510,5 +555,5 @@
 			<a href=""><img src="assets/media/fpic-6.svg" alt=""></a>
 		</div>
 	</footer>
-	</body>
+</body>
 </html>
