--- a/index.html
+++ b/index.html
@@ -481,9 +481,9 @@
 			<p class="text-[#212121] text-base font-medium max-[640px:text-sm mb-12 max-[640px]:mb-5">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br class="max-[640px]:hidden"> Latin literature from 45 BC, making it over 2000 years old.</p>
 		</div>
 		<div class="flex max-[640px]:flex-col justify-between items-center">
-			<div class="max-[640px]:text-center max-[640px]:order-2 px-16">
+			<div class="max-[640px]:text-center max-[640px]:order-2 max-[640px]:px-16">
 				<div class="choose-details">
-					<div class="flex gap-6 max-[640px]:flex-col max-[640px]:justify-center">
+					<div class="flex gap-6 max-[640px]:flex-col max-[640px]:justify-center mb-8">
 						<a class="max-[640px]:mx-auto w-16 h-16 p-5 bg-[#E7E7E7] rounded-full max-[640px]:mb-2" href="#"><img src="assets/media/icon1.svg" alt=""></a>
 						<div>
 							<h4 class=" max-[640px]:mb-6 font-extrabold text-[#212121] text-2xl mb-3">Dedicated Team</h4>
@@ -492,8 +492,8 @@
 							<p class="text-[#717171] text-base font-medium max-[640px]:mb-5">Professional employees are there for you to pick <br class="max-[640px]:hidden "> the most amazing and fresh fruits.</p>
 						</div>
 					</div>
-					<div class="flex gap-6 max-[640px]:flex-col max-[640px]:justify-center">
-						<a class="max-[640px]:mx-auto w-16 h-16 p-5 bg-[#E7E7E7] rounded-full max-[640px]:mb-2" href="#"><img src="assets/media/icon1.svg" alt=""></a>
+					<div class="flex gap-6 max-[640px]:flex-col max-[640px]:justify-center mb-8">
+						<a class="max-[640px]:mx-auto w-16 h-16 p-5 bg-[#E7E7E7] rounded-full max-[640px]:mb-2" href="#"><img src="assets/media/icon2.svg" alt=""></a>
 						<div>
 							<h4 class=" max-[640px]:mb-6 font-extrabold text-[#212121] text-2xl mb-3">Dedicated Team</h4>
 							<div class="max-[640px]:mx-auto border border-[#414141] w-28 mb-4">
@@ -501,8 +501,8 @@
 							<p class="text-[#717171] text-base font-medium max-[640px]:mb-5">Professional employees are there for you to pick <br class="max-[640px]:hidden "> the most amazing and fresh fruits.</p>
 						</div>
 					</div>
-					<div class="flex gap-6 max-[640px]:flex-col max-[640px]:justify-center">
-						<a class="max-[640px]:mx-auto w-16 h-16 p-5 bg-[#E7E7E7] rounded-full max-[640px]:mb-2" href="#"><img src="assets/media/icon1.svg" alt=""></a>
+					<div class="flex gap-6 max-[640px]:flex-col max-[640px]:justify-center mb-8">
+						<a class="max-[640px]:mx-auto w-16 h-16 p-5 bg-[#E7E7E7] rounded-full max-[640px]:mb-2" href="#"><img src="assets/media/icon3.svg" alt=""></a>
 						<div>
 							<h4 class=" max-[640px]:mb-6 font-extrabold text-[#212121] text-2xl mb-3">Dedicated Team</h4>
 							<div class="max-[640px]:mx-auto border border-[#414141] w-28 mb-4">
@@ -515,7 +515,43 @@
 			<div class="max-[640px]:order-1 max-[640px]:mb-6">
 				<img src="assets/media/whychoose1.png" alt="" class="h-full">
 			</div>
-			
+			<div class="max-[640px]:text-center max-[640px]:order-3 max-[640px]:px-16">
+				<div>
+					<div class="flex gap-6 max-[640px]:flex-col max-[640px]:justify-center mb-8 flex-row-reverse">
+						<a class="max-[640px]:mx-auto w-16 h-16 p-5 bg-[#E7E7E7] rounded-full max-[640px]:mb-2" href="#"><img src="assets/media/icon4.svg" alt=""></a>
+						<div class="text-end max-[640px]:text-center">
+							<h4 class=" max-[640px]:mb-6 font-extrabold text-[#212121] text-2xl mb-3">Dedicated Team</h4>
+							<div class="flex justify-end max-[640px]:justify-center">
+								<div class=" border border-[#414141] w-28 mb-4">
+								</div>
+							</div>
+							<p class="text-[#717171] text-base font-medium max-[640px]:mb-5">Professional employees are there for you to pick <br class="max-[640px]:hidden "> the most amazing and fresh fruits.</p>
+						</div>
+					</div>
+					<div class="flex gap-6 max-[640px]:flex-col max-[640px]:justify-center mb-8 flex-row-reverse">
+						<a class="max-[640px]:mx-auto w-16 h-16 p-5 bg-[#E7E7E7] rounded-full max-[640px]:mb-2" href="#"><img src="assets/media/icon5.svg" alt=""></a>
+						<div class="text-end max-[640px]:text-center">
+							<h4 class=" max-[640px]:mb-6 font-extrabold text-[#212121] text-2xl mb-3">Dedicated Team</h4>
+							<div class="flex justify-end max-[640px]:justify-center">
+								<div class="add-style border border-[#414141] w-28 mb-4">
+								</div>
+							</div>
+							<p class="text-[#717171] text-base font-medium max-[640px]:mb-5">Professional employees are there for you to pick <br class="max-[640px]:hidden "> the most amazing and fresh fruits.</p>
+						</div>
+					</div>
+					<div class="flex gap-6 max-[640px]:flex-col max-[640px]:justify-center mb-8 flex-row-reverse">
+						<a class="max-[640px]:mx-auto w-16 h-16 p-5 bg-[#E7E7E7] rounded-full max-[640px]:mb-2" href="#"><img src="assets/media/icon6.svg" alt=""></a>
+						<div class="text-right max-[640px]:text-center">
+							<h4 class=" max-[640px]:mb-6 font-extrabold text-[#212121] text-2xl mb-3">Dedicated Team</h4>
+							<div class="flex justify-end max-[640px]:justify-center">
+								<div class="add-style border border-[#414141] w-28 mb-4">
+								</div>
+							</div>
+							<p class="text-[#717171] text-base font-medium max-[640px]:mb-5 max-[640px]:text">Professional employees are there for you to pick <br class="max-[640px]:hidden "> the most amazing and fresh fruits.</p>
+						</div>
+					</div>
+				</div> 
+			</div>
 		</div>
 	</section>
 	</main>
