--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
 					</div>
 					<div>
 						<ul class="flex items-center justify-center gap-2 mb-8">
-							<li><img src="assets/media/Vector1.png" alt=""></li>
-							<li><img src="assets/media/Vector2.png" alt=""></li>
-							<li><img src="assets/media/Vector3.png" alt=""></li>
-							<li><img src="assets/media/Vector3.png" alt=""></li>
-							<li><img src="assets/media/Vector3.png" alt=""></li>
+							<li><img src="assets/media/vector1.png" alt=""></li>
+							<li><img src="assets/media/vector2.png" alt=""></li>
+							<li><img src="assets/media/vector3.png" alt=""></li>
+							<li><img src="assets/media/vector3.png" alt=""></li>
+							<li><img src="assets/media/vector3.png" alt=""></li>
 						</ul>
 					</div>
 					<div>
@@ -253,11 +253,11 @@
 								<p class="font-medium text-base mb-8 text-[#212121]">Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
 								<div class="mb-10">
 									<ul class="flex items-center justify-center gap-2">
-										<li><img src="assets/media/Vector1.png" alt=""></li>
-										<li><img src="assets/media/Vector2.png" alt=""></li>
-										<li><img src="assets/media/Vector3.png" alt=""></li>
-										<li><img src="assets/media/Vector3.png" alt=""></li>
-										<li><img src="assets/media/Vector3.png" alt=""></li>
+										<li><img src="assets/media/vector1.png" alt=""></li>
+										<li><img src="assets/media/vector2.png" alt=""></li>
+										<li><img src="assets/media/vector3.png" alt=""></li>
+										<li><img src="assets/media/vector3.png" alt=""></li>
+										<li><img src="assets/media/vector3.png" alt=""></li>
 									</ul>
 								</div>
 								<div class="modal-action flex justify-center">
@@ -284,11 +284,11 @@
 					</div>
 					<div>
 						<ul class="flex items-center justify-center gap-2 mb-8">
-							<li><img src="assets/media/Vector1.png" alt=""></li>
-							<li><img src="assets/media/Vector2.png" alt=""></li>
-							<li><img src="assets/media/Vector3.png" alt=""></li>
-							<li><img src="assets/media/Vector3.png" alt=""></li>
-							<li><img src="assets/media/Vector3.png" alt=""></li>
+							<li><img src="assets/media/vector1.png" alt=""></li>
+							<li><img src="assets/media/vector2.png" alt=""></li>
+							<li><img src="assets/media/vector3.png" alt=""></li>
+							<li><img src="assets/media/vector3.png" alt=""></li>
+							<li><img src="assets/media/vector3.png" alt=""></li>
 						</ul>
 					</div>
 					<div>
@@ -302,11 +302,11 @@
 								<p class="font-medium text-base mb-8 text-[#212121]">Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
 								<div class="mb-10">
 									<ul class="flex items-center justify-center gap-2">
-										<li><img src="assets/media/Vector1.png" alt=""></li>
-										<li><img src="assets/media/Vector2.png" alt=""></li>
-										<li><img src="assets/media/Vector3.png" alt=""></li>
-										<li><img src="assets/media/Vector3.png" alt=""></li>
-										<li><img src="assets/media/Vector3.png" alt=""></li>
+										<li><img src="assets/media/vector1.png" alt=""></li>
+										<li><img src="assets/media/vector2.png" alt=""></li>
+										<li><img src="assets/media/vector3.png" alt=""></li>
+										<li><img src="assets/media/vector3.png" alt=""></li>
+										<li><img src="assets/media/vector3.png" alt=""></li>
 									</ul>
 								</div>
 								<div class="modal-action flex justify-center">
@@ -333,11 +333,11 @@
 					</div>
 					<div>
 						<ul class="flex items-center justify-center gap-2 mb-8">
-							<li><img src="assets/media/Vector1.png" alt=""></li>
-							<li><img src="assets/media/Vector2.png" alt=""></li>
-							<li><img src="assets/media/Vector3.png" alt=""></li>
-							<li><img src="assets/media/Vector3.png" alt=""></li>
-							<li><img src="assets/media/Vector3.png" alt=""></li>
+							<li><img src="assets/media/vector1.png" alt=""></li>
+							<li><img src="assets/media/vector2.png" alt=""></li>
+							<li><img src="assets/media/vector3.png" alt=""></li>
+							<li><img src="assets/media/vector3.png" alt=""></li>
+							<li><img src="assets/media/vector3.png" alt=""></li>
 						</ul>
 					</div>
 					<div>
@@ -351,11 +351,11 @@
 								<p class="font-medium text-base mb-8 text-[#212121]">Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
 								<div class="mb-10">
 									<ul class="flex items-center justify-center gap-2">
-										<li><img src="assets/media/Vector1.png" alt=""></li>
-										<li><img src="assets/media/Vector2.png" alt=""></li>
-										<li><img src="assets/media/Vector3.png" alt=""></li>
-										<li><img src="assets/media/Vector3.png" alt=""></li>
-										<li><img src="assets/media/Vector3.png" alt=""></li>
+										<li><img src="assets/media/vector1.png" alt=""></li>
+										<li><img src="assets/media/vector2.png" alt=""></li>
+										<li><img src="assets/media/vector3.png" alt=""></li>
+										<li><img src="assets/media/vector3.png" alt=""></li>
+										<li><img src="assets/media/vector3.png" alt=""></li>
 									</ul>
 								</div>
 								<div class="modal-action flex justify-center">
@@ -382,11 +382,11 @@
 					</div>
 					<div class="mb-8">
 						<ul class="flex items-center justify-center gap-2 ">
-							<li><img src="assets/media/Vector1.png" alt=""></li>
-							<li><img src="assets/media/Vector2.png" alt=""></li>
-							<li><img src="assets/media/Vector3.png" alt=""></li>
-							<li><img src="assets/media/Vector3.png" alt=""></li>
-							<li><img src="assets/media/Vector3.png" alt=""></li>
+							<li><img src="assets/media/vector1.png" alt=""></li>
+							<li><img src="assets/media/vector2.png" alt=""></li>
+							<li><img src="assets/media/vector3.png" alt=""></li>
+							<li><img src="assets/media/vector3.png" alt=""></li>
+							<li><img src="assets/media/vector3.png" alt=""></li>
 						</ul>
 					</div>
 					<div>
@@ -400,11 +400,11 @@
 								<p class="font-medium text-base mb-8 text-[#212121]">Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
 								<div class="mb-10">
 									<ul class="flex items-center justify-center gap-2">
-										<li><img src="assets/media/Vector1.png" alt=""></li>
-										<li><img src="assets/media/Vector2.png" alt=""></li>
-										<li><img src="assets/media/Vector3.png" alt=""></li>
-										<li><img src="assets/media/Vector3.png" alt=""></li>
-										<li><img src="assets/media/Vector3.png" alt=""></li>
+										<li><img src="assets/media/vector1.png" alt=""></li>
+										<li><img src="assets/media/vector2.png" alt=""></li>
+										<li><img src="assets/media/vector3.png" alt=""></li>
+										<li><img src="assets/media/vector3.png" alt=""></li>
+										<li><img src="assets/media/vector3.png" alt=""></li>
 									</ul>
 								</div>
 								<div class="modal-action flex justify-center">
