--- a/index.html
+++ b/index.html
@@ -423,13 +423,12 @@
 		</section>
 		<!-- meet the team section -->
 		<section class="team-section">
-			<div class="image-holder py-32 mb-36 max-[575.98px]:mb-8 rounded-lg px-4">
+			<div class="image-holder py-32 mb-36 max-[767.98px]:mb-8 max-[575.98px]:mb-8 rounded-lg px-4 ">
 				<div class="text-center">
-					<h2 class="font-extrabold text-[#FFFFFF] text-5xl mb-6 max-[575.98px]:text-xl">Meet the team section</h2>
+					<h2 class="font-extrabold text-[#FFFFFF] text-5xl mb-6 max-[575.98px]:text-xl ">Meet the team section</h2>
 					<p class="text-[#FFFFFF] text-base font-medium mb-12 max-[575.98px]:text-sm">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br class="max-[575.98px]:hidden"> Latin literature from 45 BC, making it over 2000 years old.</p>
 				</div>
-				<div class="flex justify-center max-[575.98px]:flex-col items-center gap-28
-				max-[575.98px]:gap-6 ">
+				<div class="flex justify-center max-[575.98px]:flex-col max-[767.98px]:flex-col items-center gap-28 max-[575.98px]:gap-6">
 					<div class="text-center">
 						<img class=" mb-8" src="assets/media/member1.png" alt="">
 						<h4 class="mb-2 text-[#FFFFFF] font-bold text-2xl">Awlad Hossain</h4>
@@ -450,7 +449,7 @@
 							<a class="add-style-2 font-bold text-[#FFFFFF] bg-[#F85559] rounded-full " href="#"><i class="fa-brands fa-linkedin-in"></i></a>
 						</div>
 					</div>
-					<div class="text-center ">
+					<div class="text-center">
 						<img class="mb-8 " src="assets/media/member3.png" alt="">
 						<h4 class="mb-2 text-[#FFFFFF] font-bold text-2xl">Awlad Hossain</h4>
 						<p class="mb-4 text-[#FFFFFF] text">Fruits Expert</p>
@@ -475,15 +474,15 @@
 		</section>
 		
 		<!-- why choose you section -->
-		<section class="choose-section mb-36 max-[575.98px]:mb-8">
+		<section class="choose-section mb-36 max-[575.98px]:mb-8 max-[767.98px]:mb:8 ">
 			<div class="text-center">
-				<h2 class="font-extrabold text-[#212121] text-5xl mb-6 max-[575.98px]:text-xl">Why Choose Us</h2>
+				<h2 class="font-extrabold text-[#212121] text-5xl mb-6 max-[575.98px]:text-xl max-[767.98px]:mb-8">Why Choose Us</h2>
 				<p class="text-[#212121] text-base font-medium max-[575.98px:text-sm mb-12 max-[575.98px]:mb-5">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br class="max-[575.98px]:hidden"> Latin literature from 45 BC, making it over 2000 years old.</p>
 			</div>
-			<div class="flex max-[575.98px]:flex-col justify-between items-center">
-				<div class="max-[575.98px]:text-center max-[575.98px]:order-2 max-[575.98px]:px-16">
+			<div class="flex max-[575.98px]:flex-col max-[767.98px]:flex-col justify-between items-center">
+				<div class="max-[575.98px]:text-center max-[575.98px]:order-2 max-[575.98px]:px-16 max-[767.98px]:order-2">
 					<div class="choose-details">
-						<div class="flex gap-6 max-[575.98px]:flex-col max-[575.98px]:justify-center mb-8">
+						<div class="flex gap-6 max-[575.98px]:flex-col max-[767.98px]:flex-col max-[575.98px]:justify-center mb-8">
 							<a class="max-[575.98px]:mx-auto w-16 h-16 p-5 bg-[#E7E7E7] rounded-full max-[575.98px]:mb-2" href="#"><img src="assets/media/icon1.svg" alt=""></a>
 							<div>
 								<h4 class=" max-[575.98px]:mb-6 font-extrabold text-[#212121] text-2xl mb-3">Dedicated Team</h4>
@@ -492,7 +491,7 @@
 								<p class="text-[#717171] text-base font-medium max-[575.98px]:mb-5">Professional employees are there for you to pick <br class="max-[575.98px]:hidden "> the most amazing and fresh fruits.</p>
 							</div>
 						</div>
-						<div class="flex gap-6 max-[575.98px]:flex-col max-[575.98px]:justify-center mb-8">
+						<div class="flex gap-6 max-[575.98px]:flex-col  max-[767.98px]:flex-col max-[575.98px]:justify-center mb-8">
 							<a class="max-[575.98px]:mx-auto w-16 h-16 p-5 bg-[#E7E7E7] rounded-full max-[575.98px]:mb-2" href="#"><img src="assets/media/icon2.svg" alt=""></a>
 							<div>
 								<h4 class=" max-[575.98px]:mb-6 font-extrabold text-[#212121] text-2xl mb-3">Dedicated Team</h4>
@@ -501,7 +500,7 @@
 								<p class="text-[#717171] text-base font-medium max-[575.98px]:mb-5">Professional employees are there for you to pick <br class="max-[575.98px]:hidden "> the most amazing and fresh fruits.</p>
 							</div>
 						</div>
-						<div class="flex gap-6 max-[575.98px]:flex-col max-[575.98px]:justify-center mb-8">
+						<div class="flex gap-6 max-[575.98px]:flex-col  max-[767.98px]:flex-col max-[575.98px]:justify-center mb-8">
 							<a class="max-[575.98px]:mx-auto w-16 h-16 p-5 bg-[#E7E7E7] rounded-full max-[575.98px]:mb-2" href="#"><img src="assets/media/icon3.svg" alt=""></a>
 							<div>
 								<h4 class=" max-[575.98px]:mb-6 font-extrabold text-[#212121] text-2xl mb-3">Dedicated Team</h4>
@@ -512,12 +511,12 @@
 						</div>
 					</div> 
 				</div>
-				<div class="max-[575.98px]:order-1 max-[575.98px]:mb-6">
+				<div class="max-[575.98px]:order-1 max-[767.98px]:order-1 max-[575.98px]:mb-6">
 					<img src="assets/media/whychoose1.png" alt="" class="h-full">
 				</div>
-				<div class="max-[575.98px]:text-center max-[575.98px]:order-3 max-[575.98px]:px-16">
+				<div class="max-[575.98px]:text-center max-[575.98px]:order-3 max-[767.98px]:order-3 max-[575.98px]:px-16">
 					<div>
-						<div class="flex gap-6 max-[575.98px]:flex-col max-[575.98px]:justify-center mb-8 flex-row-reverse">
+						<div class="flex gap-6 max-[575.98px]:flex-col  max-[767.98px]:flex-col max-[575.98px]:justify-center mb-8 flex-row-reverse">
 							<a class="max-[575.98px]:mx-auto w-16 h-16 p-5 bg-[#E7E7E7] rounded-full max-[575.98px]:mb-2" href="#"><img src="assets/media/icon4.svg" alt=""></a>
 							<div class="text-end max-[575.98px]:text-center">
 								<h4 class=" max-[575.98px]:mb-6 font-extrabold text-[#212121] text-2xl mb-3">Dedicated Team</h4>
@@ -528,7 +527,7 @@
 								<p class="text-[#717171] text-base font-medium max-[575.98px]:mb-5">Professional employees are there for you to pick <br class="max-[575.98px]:hidden "> the most amazing and fresh fruits.</p>
 							</div>
 						</div>
-						<div class="flex gap-6 max-[575.98px]:flex-col max-[575.98px]:justify-center mb-8 flex-row-reverse">
+						<div class="flex gap-6 max-[575.98px]:flex-col  max-[767.98px]:flex-col max-[575.98px]:justify-center mb-8 flex-row-reverse">
 							<a class="max-[575.98px]:mx-auto w-16 h-16 p-5 bg-[#E7E7E7] rounded-full max-[575.98px]:mb-2" href="#"><img src="assets/media/icon5.svg" alt=""></a>
 							<div class="text-end max-[575.98px]:text-center">
 								<h4 class=" max-[575.98px]:mb-6 font-extrabold text-[#212121] text-2xl mb-3">Dedicated Team</h4>
@@ -539,7 +538,7 @@
 								<p class="text-[#717171] text-base font-medium max-[575.98px]:mb-5">Professional employees are there for you to pick <br class="max-[575.98px]:hidden "> the most amazing and fresh fruits.</p>
 							</div>
 						</div>
-						<div class="flex gap-6 max-[575.98px]:flex-col max-[575.98px]:justify-center mb-8 flex-row-reverse">
+						<div class="flex gap-6 max-[575.98px]:flex-col  max-[767.98px]:flex-col max-[575.98px]:justify-center mb-8 flex-row-reverse">
 							<a class="max-[575.98px]:mx-auto w-16 h-16 p-5 bg-[#E7E7E7] rounded-full max-[575.98px]:mb-2" href="#"><img src="assets/media/icon6.svg" alt=""></a>
 							<div class="text-right max-[575.98px]:text-center">
 								<h4 class=" max-[575.98px]:mb-6 font-extrabold text-[#212121] text-2xl mb-3">Dedicated Team</h4>
